Terraform-AWS/module-2/security/security.tf
variable "sg_name" {}
variable "vpc_id" {}


resource "aws_security_group" "demo-sg" {
    name = var.sg_name
    description = "This is a demo security group"
    vpc_id = var.vpc_id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"] 
    }

    ingress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"] 
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1" 
        cidr_blocks = ["0.0.0.0/0"] 
    }

    tags = {
        Name = "dev-demo-sg"
    }

}

output "jenkins_sg_id" {
    value = aws_security_group.demo-sg.id

}
